# snip

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  benchmark_results.md  pyproject.toml
corpus/: build_log_fail.txt  build_log_success.txt  file_read_python.txt  grep_results.txt  ls_large.txt  pip_install.txt  test_fail.txt  test_pass.txt
docs/: architecture.md
src/brainfog/: __init__.py  __main__.py  classifier.py  cli.py  config.py  constants.py  dashboard.py  db.py  metrics.py  pruner.py  server.py  tokenizer.py
src/snip/: __init__.py  __main__.py  classifier.py  cli.py  config.py  constants.py  dashboard.py  db.py  metrics.py  pruner.py  server.py  telemetry.py  tokenizer.py
src/snip/corpus/: build_log_fail.txt  build_log_success.txt  git_log.txt  grep_results.txt  ls_large.txt  pip_install.txt  test_fail.txt  test_pass.txt
supabase/functions/log-install/: index.ts
supabase/migrations/: 001_installs.sql
tests/: conftest.py  test_benchmark.py  test_classifier.py  test_config.py  test_dashboard.py  test_db.py  test_pruner.py  test_server.py  test_telemetry.py  test_tokenizer.py
