[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainfog"
version = "0.1.0"
description = "MCP server that reduces token bloat in agentic AI workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BrainFog Contributors" },
]
keywords = ["mcp", "claude", "token-optimization", "ai-tools", "context-pruning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
brainfog = "brainfog.cli:main"

[project.urls]
Homepage = "https://github.com/brainfog/brainfog"
Repository = "https://github.com/brainfog/brainfog"
Issues = "https://github.com/brainfog/brainfog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/brainfog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["src/brainfog"]

[tool.coverage.report]
fail_under = 80
