[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snip"
version = "0.1.0"
description = "MCP server that reduces token bloat in agentic AI workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "snip Contributors" },
]
keywords = ["mcp", "claude", "token-optimization", "ai-tools", "context-pruning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
snip = "snip.cli:main"

[project.urls]
Homepage = "https://github.com/snip/snip"
Repository = "https://github.com/snip/snip"
Issues = "https://github.com/snip/snip/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/snip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["src/snip"]

[tool.coverage.report]
fail_under = 80
